--- a/config.yml
+++ b/config.yml
@@ -41,6 +41,6 @@ policies:
   - name: RulePolicy
 
 config:
-  # other configuration parameters...
+  # other configuration parameters...#Not mandatory
   domain: "/etc/rasa_171/domain.yml"
   credentials: /etc/rasa_171/credentials.yml
